# cpp_custom_lib_fetch_content

./: .clang-tidy  .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp
